# socialseed-tasker

./: .dockerignore  .gitignore  API_REFERENCE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  HISTORY.md  README.md  ROADMAP.md  SECURITY.md  SESSION_SUMMARY.md  VERSIONS.md  docker-compose-minimal.yml  docker-compose.yml  features.md  fix_ids.py  project.md  prompt.md  pyproject.toml  report.md  requirements.txt  sugerencias.md  test_out.txt
.agent/: README.md  code_graph.md
.agent/skills/: api-client.md  documentation-sync.md  environment-tooling.md  hexagonal-architecture.md  issue-driven-development.md  module-detection.md  project-documentation.md  project-testing.md  reporter.md  terminal.md
.agent/workflows/: commit-push.md  convert-findings-to-issues.md  create-issue.md  implement-issue.md  project-setup.md  prueba-el-proyecto.md  test-code.md  test-project-pypi.md  test-project.md
.github/workflows/: ci.yml  dependency-update.yml  publish.yml  release.yml
.history/: 2026-04-23.md  2026-04-24.md  2026-04-27.md
.issues/: 01-fix-duplicate-fake-repository.md  02-fix-n-plus-one-blocked-issues.md  03-typed-analysis-api-schemas.md  04-component-update-delete-cli.md  05-cli-neo4j-backend-support.md  06-transaction-boundaries.md  07-improve-root-cause-analysis.md  08-add-analysis-api-tests.md  09-remove-sys-path-hack.md  10-add-cli-command-tests.md
.issues/done/: 01-generate-hexagonal-directory-structure.md  02-create-issue-component-entities.md  03-define-task-repository-interface-and-actions.md  04-configure-neo4j-docker-compose-with-apoc.md  05-create-multi-stage-dockerfile.md  06-implement-typer-cli-application.md  07-implement-fastapi-rest-api.md  08-implement-neo4j-graph-database-storage.md  09-implement-local-files-storage-fallback.md  10-implement-dependency-injection-wiring.md  100-fix-analysis-endpoints.md  101-fix-api-version.md  102-input-validation.md  103-fix-webhook-endpoint.md  104-missing-api-routes.md  105-integrate-webhook-validator.md  106-integrate-secret-manager.md  107-api-authentication.md  108-rate-limiting.md  109-token-validation-length.md  11-implement-architectural-integrity-rules.md  110-dependency-validation.md  111-integration-tests.md  112-fix-cli-test-failures.md  113-fix-api-version.md  114-investigate-analysis-404.md  115-fix-admin-reset-404.md  116-fix-pagination-format.md  117-fix-api-version-docker.md  118-fix-webhook-test-404.md  119-fix-sync-status-404.md  12-implement-causal-traceability-root-cause.md  120-docker-integration-tests.md  121-sync-dependency-health.md  122-admin-authentication.md  123-webhook-validation.md  124-coverage-70.md  125-document-pagination.md  126-add-constraints-configuration.md  127-cli-password-required-envvar.md  (+181 more)
.issues/to-do/: 150-cli-authentication-ux.md  151-windows-entry-points.md  152-component-output-enhancement.md  153-project-init-location.md  154-issue-listing-verbosity.md  155-frontend-authentication.md  156-api-schema-sync.md  157-flexible-initialization.md  158-cli-persistent-authentication.md  159-refactor-api-pagination-cypher.md  160-modularize-routes-by-domain.md  161-integration-tests-neo4j-transactions.md  162-frontend-authentication-handling.md  163-api-schema-synchronization-openapi.md  164-ui-store-reactivity-refactoring.md  166-ui-store-reactivity.md  168-missing-documentation-in-scaffold.md  170-frontend-board-docker-compose.md  172-tasker-board-not-commented.md  173-frontend-not-connecting-api.md  181-document-version-checking.md  182-package-verification.md  185-enhance-pypi-documentation.md  186-refactor-cli-modules.md  187-migrate-ids-to-semantic-relations.md  188-component-dependency-graph.md  189-epics-and-okrs.md  190-cost-and-effort-attribution.md  191-deployment-traceability.md  192-vector-indexing-reasoning.md  77-fix-cli-output-with-extra-blank-lines.md
docs/: GRAPH_MODEL.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/: App.vue
frontend/src/api/: analysisApi.ts  client.ts  componentsApi.ts  dependenciesApi.ts  issuesApi.ts
frontend/src/assets/: main.css
frontend/src/composables/: useToast.ts
frontend/src/router/: index.ts
frontend/src/stores/: authStore.ts  componentsStore.ts  issuesStore.ts  uiStore.ts
frontend/src/types/: index.ts
frontend/src/views/: BoardView.vue  ComponentsView.vue  GraphView.vue  IssueDetailView.vue  ListView.vue  NotFoundView.vue
src/socialseed_tasker/: __init__.py
src/socialseed_tasker/bootstrap/: container.py  wiring.py
src/socialseed_tasker/entrypoints/: __init__.py
temp_install/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
temp_install/tests/: conftest.py
temp_install/tests/unit/: test_entities.py  (+1 more)
temporal/: check_api.py  commands.py  seed_issues.py  seed_issues_v2.py
temporal/tasker/: docker-compose.yml  tasker.constraints.yml
tests/fakes/: fake_neo4j_driver.py
tests/integration/: test_neo4j_repository.py  test_webhooks.py
tests/unit/: test_actions.py  test_ai_rag.py  test_analyzer.py  test_api.py  test_bootstrap.py  test_cli_commands.py  test_code_graph.py  test_constraints.py  test_container.py  test_embedding_service.py  test_entities.py  test_file_repository.py  test_file_store.py  test_markdown_transformer.py  test_policy.py  test_reasoning.py  test_repositories.py  test_root_cause_analyzer.py  test_scaffolder.py  test_secret_manager.py  test_validation.py  test_webhook_validator.py
(+105 files in other folders)
