[project]
name = "socialseed-tasker"
version = "0.8.1"
description = "A graph-based task management framework for AI agents"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Dairon Pérez Frías", email = "dairon.perezfrias@gmail.com"},
]
keywords = ["task-management", "neo4j", "graph-database", "ai-agents", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # CLI
    "typer>=0.9.0",
    "rich>=13.0.0",
    
    # API
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    
    # Validation
    "pydantic>=2.5.0",
    
    # Database
    "neo4j>=5.15.0",
    
    # Sync
    "httpx>=0.26.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
neo4j = [
    "neo4j>=5.15.0",
]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "testcontainers[neo4j]>=3.7.0",
    "httpx",
    
    # Linting
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    
    # Security
    "pip-audit>=0.1.0",
    
    # Type stubs
    "types-setuptools",
    
    # Documentation
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
socialseed_tasker = [
    "../.agent/**",
    "assets/**/*",
    "assets/templates/**/*",
    "assets/templates/skills/**/*",
    "assets/templates/configs/**/*",
    "assets/frontend/**/*",
]

[project.scripts]
socialseed-tasker = "socialseed_tasker.entrypoints.terminal_cli.app:main_entry"
tasker = "socialseed_tasker.entrypoints.terminal_cli.app:main_entry"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["socialseed_tasker"]

[tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401", "F811"]
 "tests/*" = ["F401", "F811", "B008"]
 "**/app.py" = ["E402", "F401"]
 "**/cli/*" = ["E402", "B008"]
 "**/actions.py" = ["B008", "SIM102"]
 "**/routes.py" = ["B008", "F811", "F401", "E402", "UP035"]
 "**/terminal_cli/commands.py" = ["B008", "E501"]
 "**/terminal_cli/*.py" = ["E402", "F401", "B008"]
 "**/web_api/*.py" = ["F401", "F811", "E402", "B904"]
 "**/secret_manager.py" = ["SIM108", "SIM110"]
 "**/scaffolder.py" = ["SIM108"]
 "**/services/*.py" = ["SIM108", "SIM110", "B904"]
 "**/adapters/*.py" = ["B904"]
 "**/core/**/*.py" = ["B904"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = ["neo4j.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=socialseed_tasker --cov-report=term-missing"